--- a/es-index.html
+++ b/es-index.html
@@ -19,12 +19,8 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Inicio</a></h1>
-                        <select name="" value="Lenguaje..." id="" style="width: 8em;">
-                            <option disabled="disabled" selected>Language</option> 
-                            <option value="es">Español</option>
-                            <option value="en">English</option>
-                        </select>
+						<h1><a href="es-index.html">Inicio</a></h1>
+                        <a href="index.html" class="es"><button>ES</button></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -35,7 +31,7 @@
 						<div class="inner">
 							<h2>Menu</h2>
 							<ul class="links">
-								<li><a href="index.html">Inicio</a></li>
+								<li><a href="es-index.html">Inicio</a></li>
 								<li><a href="generic.html">Generic</a></li>
 								<li><a href="elements.html">Elements</a></li>
 							</ul>
