--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Home</a></h1>
+						<h1><a href="index.html">Inicio</a></h1>
 						<nav>
+							<a href="es-index.html" class="en"><button>ES</button></a>
 							<a href="#menu">Menu</a>
 						</nav>
 					</header>
@@ -42,8 +43,11 @@
 					<section id="banner">
 						<div class="inner">
 							<div class="logo"></div>
-							<h2>hello, i am Alejandro Jameson</h2>
-							<p class="fullstack">Full Stack | Front End </p>
+							<h2><font color="#D227ED"><</font><font color="white"> Alejandro Jameson </font><font color="#D227ED">/</font><font color="#D227ED">></font><font color="#FD02F"> </font><font color="#F61024"> </font></h2>
+							<div class="containerTitle">
+								<p><span class="typed-text"></span><span class="cursor">&nbsp;</span></p>
+								<script src="Developer.js"></script>
+							  </div>
 						</div>
 					</section>
 
@@ -53,11 +57,14 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+									<div class="image"></a><img src="images/pic01.jpg" alt="" /></div>
 									<div class="content">
 										<h2 class="major">About Me</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
+										<p>Full Stack Developer specialized in JavaScript, ReactJS and NodeJS.
+											I can easily adaptable to any group or environment. 
+											I am constantly learning about new technologies, a lover of solving puzzles and able to solve any problem. 
+											Always ready to give my best and achieve any kind of goal.</p>
+											<a href="https://www.dropbox.com/s/j3jteyjxh6im0pa/CV_Alejandro_Jameson.pdf?dl=0" target="_blank" class="btn"><span>My CV</span></a>
 									</div>
 								</div>
 							</section>
@@ -66,19 +73,31 @@
 						<!-- Four -->
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
-									<h2 class="major">Vitae phasellus</h2>
-									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+									<h2 class="major">Portafolio</h2>
+									<p>Algunos de los proyectos en los que trabaje</p>
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Sed feugiat lorem</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="#" class="image"><img src="images/pic04.jpg" alt="" height="270em"/></a>
+											<h3 class="major">Wipit Board</h3>
+											<p> We created a web platform for the company Wipit where 
+												programmers from different parts of the world can collaborate 
+												with each other solving tasks together.
+												</p>
+											<a href="#" class="special">Leer mas</a>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/pic04.jpg" alt="" height="270em"/></a>
+											<h3 class="major">Arcade App</h3>
+											<p>Project developed as part of the bootcamp. 
+												Web App to visualize information about Video Games. 
+												The App allows to Filter, Sort, Search, and Create information, it also contains a paging and consumes data from an external API.
+												</p>
+											<a href="#" class="special">Leer mas</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<h3 class="major">Movieflix</h3>
+											<p>Web page developed in bootcamp Henry that gives us information about movies, using an external api and allowing us to add movies to favorites and delete them.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
 										<article>
@@ -132,13 +151,14 @@
 									1234 Somewhere Road Suite #2894<br />
 									Nashville, TN 00000-0000
 								</li>
-								<li class="icon solid fa-phone">+54 (264) 483-3561</li>
-								<li class="icon solid fa-envelope"><a href="#">alejameson02@gmail.com</a></li>
+								<li class="icon solid fa-phone">(000) 000-0000</li>
+								<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
+								<li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
 								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li>
 								<li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
 							</ul>
 							<ul class="copyright">
-								<li>Design: <a href="#">Alejandro Jameson</a></li>
+								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
@@ -155,3 +175,6 @@
 
 	</body>
 </html>
+
+
+
