Add styled to background

--- a/es-index.html
+++ b/es-index.html
@@ -16,8 +16,13 @@
 	<body class="is-preload">
 
 		<!-- Page Wrapper -->
-			<div id="page-wrapper">
-
+		<div class="bg">
+		<div class="bg bg2">
+		<div class="bg bg3">
+		</div>
+	</div>
+	</div>
+			<div id="page-wrapper">	
 				<!-- Header -->
 					<header id="header" class="alt">
 						<h1><a href="es-index.html">Inicio</a></h1>
@@ -222,12 +227,90 @@
 
 
 						<!-- Four -->
-							<section id="four" class="wrapper alt style1">
+							<section id="four" class="wrapper alt style1" style="background: rgba(0, 0, 0, 0.582);">
 								<div class="inner">
 									<h2 class="major">Portafolio</h2>
 									<p>Algunos de los proyectos en los que trabaje</p>
 									<section class="features">
-										<article>
+
+										<div class="WRAPERSITO">
+											<ul class="ulcards">
+											<div class="card">
+												<img src="images/pic04.jpg" alt="">
+												<div class="descriptions">
+													<h1>Wipit Board</h1>
+													<p>
+														Realizamos una plataforma para la empresa Wipit donde programadores de distintas partes del mundo puedan colaborar entre si resolviendo tareas. Desarrollada con: Javascript, React, Redux, ChakraUI, NodeJS, Express, Sequelize, SQL y PostgreSQL, Socket.io y JWT. Realizado en un equipo de 8 personas con metodologia Scrum
+													</p>
+													<button>
+														<i class="fab fa-youtube" style="color: black;"></i>
+														<a href="https://www.youtube.com/watch?v=CSsvU37NnDw"><span style="color: black;">Play trailer</span></a>
+													</button>
+												</div>
+											</div>
+											<div class="card">
+												<img src="images/pic05.jpg" alt="">
+												<div class="descriptions">
+													<h1>Arcade APP</h1>
+													<p>
+														Web App para
+														visualizar información sobre Videojuegos, La App permite Filtrar,
+														Ordenar, Buscar, y Crear información, también contiene un
+														paginado y consume datos de una API externa.		
+														Trabaje con:
+														<br>
+														- Front: Javacript, ReactJS y Redux, CSS modules
+														<br>
+														- Back: NodeJS, ExpressJS, Sequelize
+														<br>
+														- Base de datos: SQL, PostgreSQ                </p>
+													<button>
+														<i class="fab fa-youtube" style="color: black;"></i>
+														<a href="https://www.linkedin.com/posts/alejandro-jameson_javascript-developer-react-activity-6830659261362782209-czrZ"><span style="color: black;">Play trailer</span></a>
+													</button>
+												</div>
+											</div>
+											<div class="card">
+												<img src="images/pic06.jpg" alt="">
+												<div class="descriptions">
+													<h1>Equalizer 2</h1>
+													<p>
+														If you have a problem and there is nowhere else to turn, the mysterious and elusive Robert McCall will deliver the vigilante justice you seek. This time, however, McCall's past cuts especially close to home when thugs kill Susan Plummer -- his best friend and former colleague. Now out for revenge, McCall must take on a crew of highly trained assassins who'll stop at nothing to destroy him.                </p>
+													<button>
+														<i class="fab fa-youtube" style="color: black;"></i>
+														<span style="color: black;">Play trailer on YouTube</span>
+													</button>
+												</div>
+											</div>
+											<div class="card">
+												<img src="images/pic07(2).jpg" alt="">
+												<div class="descriptions">
+													<h1>Equalizer 2</h1>
+													<p>
+														If you have a problem and there is nowhere else to turn, the mysterious and elusive Robert McCall will deliver the vigilante justice you seek. This time, however, McCall's past cuts especially close to home when thugs kill Susan Plummer -- his best friend and former colleague. Now out for revenge, McCall must take on a crew of highly trained assassins who'll stop at nothing to destroy him.                </p>
+													<button>
+														<i class="fab fa-youtube" style="color: black;"></i>
+														<span style="color: black;">Play trailer on YouTube</span>
+													</button>
+												</div>
+											</div>
+											<div class="card">
+												<img src="images/pic04.jpg" alt="">
+												<div class="descriptions">
+													<h1>Equalizer 2</h1>
+													<p>
+														If you have a problem and there is nowhere else to turn, the mysterious and elusive Robert McCall will deliver the vigilante justice you seek. This time, however, McCall's past cuts especially close to home when thugs kill Susan Plummer -- his best friend and former colleague. Now out for revenge, McCall must take on a crew of highly trained assassins who'll stop at nothing to destroy him.                </p>
+													<button>
+														<i class="fab fa-youtube" style="color: black;"></i>
+														<span style="color: black;">Play trailer on YouTube</span>
+													</button>
+												</div>
+											</div>
+											</ul>
+									
+										</div>
+
+										<!-- <article>
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" height="270em"/></a>
 											<h3 class="major">Wipit Board</h3>
 											<p> Realizamos una plataforma web para la empresa Wipit donde
@@ -268,7 +351,7 @@
 									<ul class="actions">
 										<li><a href="#" class="button">Browse All</a></li>
 									</ul>
-								</div>
+								</div> -->
 							</section>
 
 					</section>
