--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
 	<body class="is-preload">
 
 		<!-- Page Wrapper -->
+		<div class="bg">
+		<div class="bg bg2">
+		<div class="bg bg3">
+		</div>
+		</div>
+		</div>
 			<div id="page-wrapper">
 
 				<!-- Header -->
@@ -71,55 +77,137 @@
 
 
 						<!-- Four -->
-							<section id="four" class="wrapper alt style1">
-								<div class="inner">
-									<h2 class="major">Portafolio</h2>
-									<p>Algunos de los proyectos en los que trabaje</p>
-									<section class="features">
-										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" height="270em"/></a>
-											<h3 class="major">Wipit Board</h3>
-											<p> We created a web platform for the company Wipit where 
-												programmers from different parts of the world can collaborate 
-												with each other solving tasks together.
-												</p>
-											<a href="#" class="special">Leer mas</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" height="270em"/></a>
-											<h3 class="major">Arcade App</h3>
-											<p>Project developed as part of the bootcamp. 
-												Web App to visualize information about Video Games. 
-												The App allows to Filter, Sort, Search, and Create information, it also contains a paging and consumes data from an external API.
-												</p>
-											<a href="#" class="special">Leer mas</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Movieflix</h3>
-											<p>Web page developed in bootcamp Henry that gives us information about movies, using an external api and allowing us to add movies to favorites and delete them.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3 class="major">Ante fermentum</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<h3 class="major">Fusce consequat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-									</section>
-									<ul class="actions">
-										<li><a href="#" class="button">Browse All</a></li>
-									</ul>
-								</div>
-							</section>
+						<section id="four" class="wrapper alt style1" style="background: rgba(0, 0, 0, 0.582);">
+							<div class="inner" id="Portafolio">
+								<h2 class="major">Portafolio</h2>
+								<p>Algunos de los proyectos en los que trabaje</p>
+								<section class="features">
 
-					</section>
+									<div class="WRAPERSITO">
+										<ul class="ulcards">
+										<div class="card">
+											<img src="images/pic04.jpg" alt="">
+											<div class="descriptions">
+												<h1>Wipit Board</h1>
+												<p>
+													We made a platform for the company Wipit where programmers from different parts of the world can collaborate with each other solving tasks. Developed with: Javascript, React, Redux, ChakraUI, NodeJS, Express, Sequelize, SQL and PostgreSQL, Socket.io and JWT. Developed in a team of 8 people with Scrum methodology.
+												</p>
+												<button>
+													<i class="fab fa-youtube" style="color: black;"></i>
+													<a href="https://www.youtube.com/watch?v=CSsvU37NnDw"><span style="color: black;">Play trailer</span></a>
+												</button>
+											</div>
+										</div>
+										<div class="card">
+											<img src="images/pic05.jpg" alt="">
+											<div class="descriptions">
+												<h1>Arcade APP</h1>
+												<p>
+													Web App to
+													visualize information about Video Games, The App allows you to Filter, Sort, Search, and Create information,
+													Sort, Search, and Create information, it also contains a
+													paging and consumes data from an external API.		
+													Work with:
+													<br>
+													- Front: Javacript, ReactJS y Redux, CSS modules
+													<br>
+													- Back: NodeJS, ExpressJS, Sequelize
+													<br>
+													- Data Base: SQL, PostgreSQ                </p>
+												<button>
+													<i class="fab fa-youtube" style="color: black;"></i>
+													<a href="https://www.linkedin.com/posts/alejandro-jameson_javascript-developer-react-activity-6830659261362782209-czrZ"><span style="color: black;">Play trailer</span></a>
+												</button>
+												<button>
+													<a href="https://github.com/alejameson/PI-Videogames-FT14a"><span style="color: black;">💻 Code</span></a>
+												</button>
+											</div>
+										</div>
+										<div class="card">
+											<img src="images/pic06.jpg" alt="">
+											<div class="descriptions">
+												<h1>Movieflix</h1>
+												<p>
+													Web App that allows us to search information about any movie, add movies to favorites and delete them, created with Javascript, React, Redux, HTML and css, pulling information from an external Api.                </p>
+												<!-- <button>
+													<i class="fab fa-youtube" style="color: black;"></i>
+													<span style="color: black;">Play trailer on YouTube</span>
+												</button> -->
+											</div>
+										</div>
+										<div class="card">
+											<img src="images/pic07.jpg" alt="">
+											<div class="descriptions">
+												<h1>Weather App</h1>
+												<p>
+													Web App that consists of displaying information about the weather anywhere in the world, created with Javascript, React, Redux, Html, css and jquery, the app consumes data from an external api.                </p>
+												<!-- <button>
+													<i class="fab fa-youtube" style="color: black;"></i>
+													<span style="color: black;">Play trailer on YouTube</span>
+												</button> -->
+											</div>
+										</div>
+										<div class="card">
+											<img src="images/todolist.jpg" alt="">
+											<div class="descriptions">
+												<h1>ToDo App</h1>
+												<p>
+													Web App to schedule the tasks to be done during the day, created with Javascript, Html, Css and jquery.                </p>
+												<!-- <button>
+													<i class="fab fa-youtube" style="color: black;"></i>
+													<span style="color: black;">Play trailer on YouTube</span>
+												</button> -->
+											</div>
+										</div>
+										</ul>
+								
+									</div>
+
+									<!-- <article>
+										<a href="#" class="image"><img src="images/pic04.jpg" alt="" height="270em"/></a>
+										<h3 class="major">Wipit Board</h3>
+										<p> Realizamos una plataforma web para la empresa Wipit donde
+											programadores de distintas partes del mundo puedan colaborar
+											entre si resolviendo tareas en conjunto.
+											</p>
+										<a href="#" class="special">Leer mas</a>
+									</article>
+									<article>
+										<a href="#" class="image"><img src="images/pic05.jpg" alt="" height="270em"/></a>
+										<h3 class="major">Arcade App</h3>
+										<p>Proyecto desarrollado en el marco del bootcamp Henry, es una Web App para
+											visualizar informacion sobre Videojuegos, la App permite Filtrar,
+											Ordenar, Buscar, y Crear informacion, tambien contiene un
+											paginado y consume datos de una API externa.
+											</p>
+										<a href="#" class="special">Leer mas</a>
+									</article>
+									<article>
+										<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
+										<h3 class="major">Movieflix</h3>
+										<p>Pagina Web desarrollada en el bootcamp Henry que nos brinda informacion sobre peliculas, utilizando una api externa y permitiendonos agregar peliculas a favoritos y eliminarlas</p>
+										<a href="#" class="special">Learn more</a>
+									</article>
+									<article>
+										<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
+										<h3 class="major">Ante fermentum</h3>
+										<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+										<a href="#" class="special">Learn more</a>
+									</article>
+									<article>
+										<a href="#" class="image"><img src="images/pic07(2).jpg" alt="" /></a>
+										<h3 class="major">Fusce consequat</h3>
+										<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+										<a href="#" class="special">Learn more</a>
+									</article>
+								</section>
+								<ul class="actions">
+									<li><a href="#" class="button">Browse All</a></li>
+								</ul>
+							</div> -->
+						</section>
+
+				</section>
 
 				<!-- Footer -->
 					<section id="footer">
