--- a/es-index.html
+++ b/es-index.html
@@ -6,7 +6,8 @@
 -->
 <html>
 	<head>
-		<title>Solid State by HTML5 UP</title>
+		<link rel="icon" href="https://www.vippng.com/png/full/554-5544025_lightning-art-symbol-clipart-image-and-transparent.png" />
+		<title>Alejandro Jameson</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -51,15 +52,15 @@
 						<div class="inner">
 							<div class="logo"></div>
 							<h2><font color="#D227ED"><</font><font color="white"> Alejandro Jameson </font><font color="#D227ED">/</font><font color="#D227ED">></font><font color="#FD02F"> </font><font color="#F61024"> </font></h2>
-							<div class="containerTitle">
-								<p><span
+							<!-- <div class="containerTitle"> -->
+								<span
           							class="txt-rotate"
           							data-period="2000"
           							data-rotate='[ "Full Stack Developer", "Front End Developer", "Programador  🖤"]'>
-								</span></p>
+								</span>
 								<!-- <p><span class="typed-text"></span><span class="cursor">&nbsp;</span></p>
 								<script src="Developer.js"></script> -->
-							</div>
+							<!-- </div> -->
 						</div>
 					</section>
 
@@ -123,7 +124,7 @@
 												</div>
 												<div class="carousel__item">
 													<div class="skillstitcont">
-														<h4 class="skilltit">Data Base</h4>
+														<h4 class="skilltit">Base De Datos</h4>
 													</div>
 													<div class="skillscont">
 														<h4 class="liskill">SQL</h4>
@@ -391,7 +392,7 @@
 									Argentina<br />
 									San Juan<br />
 								</li>
-								<li class="icon solid fa-phone">+54 264 483 3561</li>
+								<li class="icon solid fa-phone">+54 (264) 483 3561</li>
 								<li class="icon solid fa-envelope">alejameson02@gmail.com</li>
 								<li class="icon brands fa-github"><a href="https://github.com/alejameson">github.com/alejameson</a></li>
 								<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/alejandro-jameson/">linkedin.com/in/alejandro-jameson</a></li>
@@ -415,14 +416,16 @@
 					var getElement = $(this).attr("href");
 					if($(getElement).length) {
 						var getOffset = $(getElement).offset().top;
-						var targetDistance = 50;
+						var targetDistance = 70;
 						$("html,body").animate({
 							scrollTop: getOffset - targetDistance
 						}, 500);
 					}
 				})
 			</script>
-			<script type="text/javascript">
+			<script src="Carousel.js"></script>
+			<script src="Text-Rotate.js"></script>
+<!-- 			<script type="text/javascript">
 				$(function(){
 
 // Rotate Skill Badges
@@ -460,106 +463,7 @@ $badges.mouseenter(function(){
 });
 
 });
-			</script>
-			<script type="text/javascript">
-				document.querySelectorAll(".carousel").forEach((carousel) => {
-  const items = carousel.querySelectorAll(".carousel__item");
-  const buttonsHtml = Array.from(items, () => {
-    return `<span class="carousel__button"></span>`;
-  });
-
-  carousel.insertAdjacentHTML(
-    "beforeend",
-    `
-		<div class="carousel__nav">
-			${buttonsHtml.join("")}
-		</div>
-	`
-  );
-
-  const buttons = carousel.querySelectorAll(".carousel__button");
-
-  buttons.forEach((button, i) => {
-    button.addEventListener("click", () => {
-      // un-select all the items
-      items.forEach((item) =>
-        item.classList.remove("carousel__item--selected")
-      );
-      buttons.forEach((button) =>
-        button.classList.remove("carousel__button--selected")
-      );
-
-      items[i].classList.add("carousel__item--selected");
-      button.classList.add("carousel__button--selected");
-    });
-  });
-
-  // Select the first item on page load
-  items[0].classList.add("carousel__item--selected");
-  buttons[0].classList.add("carousel__button--selected");
-});
-
-			</script>
-			<script>
-				
-var TxtRotate = function(el, toRotate, period) {
-  this.toRotate = toRotate;
-  this.el = el;
-  this.loopNum = 0;
-  this.period = parseInt(period, 5) || 4000;
-  this.txt = '';
-  this.tick();
-  this.isDeleting = false;
-};
-
-TxtRotate.prototype.tick = function() {
-  var i = this.loopNum % this.toRotate.length;
-  var fullTxt = this.toRotate[i];
-
-  if (this.isDeleting) {
-    this.txt = fullTxt.substring(0, this.txt.length - 1);
-  } else {
-    this.txt = fullTxt.substring(0, this.txt.length + 1);
-  }
-
-  this.el.innerHTML = '<span class="wrap">'+this.txt+'</span>';
-
-  var that = this;
-  var delta = 170 - Math.random() * 100;
-
-  if (this.isDeleting) { delta /= 2; }
-
-  if (!this.isDeleting && this.txt === fullTxt) {
-    delta = this.period;
-    this.isDeleting = true;
-  } else if (this.isDeleting && this.txt === '') {
-    this.isDeleting = false;
-    this.loopNum++;
-    delta = 1000;
-  }
-
-  setTimeout(function() {
-    that.tick();
-  }, delta);
-};
-
-window.onload = function() {
-  var elements = document.getElementsByClassName('txt-rotate');
-  for (var i=0; i<elements.length; i++) {
-    var toRotate = elements[i].getAttribute('data-rotate');
-    var period = elements[i].getAttribute('data-period');
-    if (toRotate) {
-      new TxtRotate(elements[i], JSON.parse(toRotate), period);
-    }
-  }
-  // INJECT CSS
-  var css = document.createElement("style");
-  css.type = "text/css";
-  css.innerHTML = ".txt-rotate > .wrap { border-right: 0.08em solid white }";
-  document.body.appendChild(css);
-};
-
-			</script>
+			</script> -->
 
 	</body>
 </html>
