--- a/index.html
+++ b/index.html
@@ -203,10 +203,9 @@
 												<h1>Movieflix</h1>
 												<p>
 													Web App that allows us to search information about any movie, add movies to favorites and delete them, created with Javascript, React, Redux, HTML and css, pulling information from an external Api.                </p>
-												<!-- <button>
-													<i class="fab fa-youtube" style="color: black;"></i>
-													<span style="color: black;">Play trailer on YouTube</span>
-												</button> -->
+												<button>
+														<a href="https://github.com/alejameson/Movieflix"><span style="color: black;">💻 Code</span></a>
+												</button>
 											</div>
 										</div>
 										<div class="card">
