--- a/en-index.html
+++ b/en-index.html
@@ -79,7 +79,7 @@
 										I can easily adaptable to any group or environment. 
 										I am constantly learning about new technologies, a lover of solving puzzles and able to solve any problem. 
 										Always ready to give my best and achieve any kind of goal.</p>
-									<a href="https://www.dropbox.com/s/j3jteyjxh6im0pa/CV_Alejandro_Jameson.pdf?dl=0" target="_blank" class="btn"><span>Mi CV</span></a>
+									<a href="https://www.dropbox.com/s/vze1ok3x19pjkg1/EN-CV-Alejandro-Jameson-FrontEnd.pdf?dl=0" target="_blank" class="btn"><span>CV</span></a>
 								</div>
 							</div>
 							<div class="inner">
