--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                             aprendizaje sobre nuevas tecnologías, amante de resolver acertijos y capaz de resolver cualquier problema.
                                             Siempre dispuesto a dar lo mejor de mi y alcanzar cualquier tipo de
                                             objetivo</p>
-										<a href="https://www.dropbox.com/s/2ltq4i1548cjv09/CV_ALEJANDRO_JAMESON_ESPA%C3%91OL.pdf?dl=0" target="_blank" class="btn"><span>Mi CV</span></a>
+										<a href="https://www.dropbox.com/s/ckvj6wwaqk2c24q/FrontEnd_CV_AlejandroJameson.pdf?dl=0" target="_blank" class="btn"><span>Mi CV</span></a>
 									</div>
 								</div>
 								<!-- Habilidades -->
